--- a/momentum-clone/style.css
+++ b/momentum-clone/style.css
@@ -17,3 +17,39 @@ html{
   width: 100%;
   z-index: -1;
 }
+
+.container{
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+#header{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+#weather{
+  display:flex;
+  align-items: center;
+  font-size: 20px;
+  padding-right: 20px;
+}
+
+#center{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgba(0,0,0,0.6);
+}
+
+#time{
+  font-size: 1000%;
+}
+
+#quote{
+  font-size: 20px;
+}
