--- a/momentum-clone/style.css
+++ b/momentum-clone/style.css
@@ -53,3 +53,16 @@ html{
 #quote{
   font-size: 20px;
 }
+
+#card{
+  background-color: rgba(0,0,0,0.6);
+  width: 50%;
+  height: 600px;
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
+}
+
+.complete{
+  text-decoration: line-through;
+}
